[package]
name = "pqdump"
version = "0.1.0"
edition = "2021"
authors = ["Berrysoft <Strawberry_Str@hotmail.com>"]
description = "A simple program to dump Parquet files."
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
comfy-table = { version = "7", default-features = false }

arrow-array = "49"
arrow-cast = "50"
parquet = "49"

[profile.release]
lto = true
codegen-units = 1
