[package]
name = "pqdump"
version = "0.1.0"
edition = "2021"
authors = ["Berrysoft <Strawberry_Str@hotmail.com>"]
description = "A simple program to dump Parquet files."
license = "MIT"
repository = "https://github.com/Berrysoft/pqdump"

[dependencies]
clap = { version = "4", features = ["derive"] }
comfy-table = { version = "7", default-features = false }

arrow-array = "53"
arrow-cast = "53"
parquet = "53"

[profile.release]
lto = true
codegen-units = 1
